--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,3 +1,7 @@
+# Common Logic
+machine: &machine-cfg
+  image: ubuntu-2004:202107-02
+
 version: 2.1
 
 commands:
@@ -97,25 +101,28 @@ commands:
 
 jobs:
   checkout:
-    machine: true
+    machine:
+      <<: *machine-cfg
     steps:
       - checkout
       - run:
           name: Clone test script
-          command: git clone https://github.com/auth0-samples/api-quickstarts-tests test
+          command: git clone -b v0.0.1 --depth 1 https://github.com/auth0-samples/api-quickstarts-tests test
       - persist_to_workspace:
           root: ~/ 
           paths:
             - project
             - test
   authorization-mvc:  
-    machine: true
+    machine:
+      <<: *machine-cfg
     steps:
       - run-sample:
           sample: "01-Authorization-MVC"
       - run-functional-tests
   authorization-webflux:
-    machine: true
+    machine:
+      <<: *machine-cfg
     steps:
       - run-sample:
           sample: "01-Authorization-WebFlux"
