--- a/01-Authorization-MVC/build.gradle
+++ b/01-Authorization-MVC/build.gradle
@@ -6,8 +6,7 @@ buildscript {
 
 plugins {
     id 'java'
-    id 'com.gradle.build-scan' version '3.2'
-    id 'org.springframework.boot' version '2.2.6.RELEASE'
+    id 'org.springframework.boot' version '2.5.5'
     id 'io.spring.dependency-management' version '1.0.9.RELEASE'
 }
 
