Providing setup for integration test

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,14 @@ commands:
           keys:
             - v1-dependencies-{{ checksum  "<<parameters.sample>>/build.gradle" }}
             - v1-dependencies-
+      # Setup environment, start the app and wait for it to come online
+      - run:
+          name: Setup Auth0 environment
+          working_directory: <<parameters.sample>>/src/main/resources/
+          command: |
+            mv application.yml.example application.yml
+            sed -i 's|{DOMAIN}|'$auth0_domain'|g' application.yml
+            sed -i 's|{API_IDENTIFIER}|'$api_identifier'|g' application.yml
       - run:
           name: Assemble and run tests
           working_directory: <<parameters.sample>>
