--- a/01-Authorization-MVC/build.gradle
+++ b/01-Authorization-MVC/build.gradle
@@ -6,13 +6,15 @@ buildscript {
 
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '2.7.0'
+    id 'org.springframework.boot' version '2.7.8'
     id 'io.spring.dependency-management' version '1.1.0'
 }
 
 group = 'com.auth0'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
+
+ext['spring-security.version']='5.8.1'
 
 repositories {
     mavenCentral()
