--- a/01-Authorization-WebFlux/src/main/resources/application.yml.example
+++ b/01-Authorization-WebFlux/src/main/resources/application.yml.example
@@ -2,17 +2,9 @@ debug: true
 server:
   port: 3010
 
-auth0:
-  # Replace with the API Identifier for your Auth0 API.
-  audience: {API_IDENTIFIER}
-
-# The following is standard Spring Security OAuth2 configuration.
-spring:
-  security:
-    oauth2:
-      resourceserver:
-        jwt:
-          # Replace with the domain of your Auth0 tenant.
-          # Note the trailing slash is important!
-          issuer-uri: https://{DOMAIN}/
-          
+okta:
+  oauth2:
+    # Replace with the domain of your Auth0 tenant.
+    issuer: https://{DOMAIN}/
+    # Replace with the API Identifier for your Auth0 API.
+    audience: {AUDIENCE}
