--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 # Common Logic
 machine: &machine-cfg
-  image: ubuntu-2004:202107-02
+  image: ubuntu-2204:2023.10.1
 
 version: 2.1
 
@@ -102,7 +102,7 @@ jobs:
       - checkout
       - run:
           name: Clone test script
-          command: git clone -b v0.0.1 --depth 1 https://github.com/auth0-samples/api-quickstarts-tests test
+          command: git clone -b v0.0.3 --depth 1 https://github.com/auth0-samples/api-quickstarts-tests test
       - persist_to_workspace:
           root: ~/ 
           paths:
